--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures{
-        viewBinding true
+        dataBinding true
     }
 }
 
@@ -46,14 +46,6 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.1"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.1"
-    // Feature module Support
-//    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.4.1"
-
-    // Testing Navigation
-//    androidTestImplementation "androidx.navigation:navigation-testing:2.4.1"
-
-    // Jetpack Compose Integration
-//    implementation "androidx.navigation:navigation-compose:2.4.1"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
